--- a/WCSTrainer/Pages/Accounts/Details.cshtml
+++ b/WCSTrainer/Pages/Accounts/Details.cshtml
@@ -44,18 +44,20 @@
                      </div>
                      @if (Model.Employee != null) {
                         <component type="typeof(Person)" render-mode="WebAssemblyPrerendered" param-EmployeeId="@Model.Employee.Id" />
-                        <div class="btn-container">
-                           <a class="btn bg-btn btnGreen" asp-page="/Employees/Edit" asp-route-id="@Model.UserAccount.EmployeeId">
-                              Edit Info
-                           </a>
-
-                           <div id="printButton" class="btn bg-btn btnWhite">
-                              <img class="hover-img" src="/images/print.svg">
-                           </div>
-                        </div>
                      }
                   </div>
                </div>
+               @if (Model.Employee != null) {
+                  <div class="btn-container">
+                     <a class="btn bg-btn btnGreen" asp-page="/Employees/Edit" asp-route-id="@Model.UserAccount.EmployeeId">
+                        Edit Info
+                     </a>
+
+                     <div id="printButton" class="btn bg-btn btnWhite">
+                        <img class="hover-img" src="/images/print.svg">
+                     </div>
+                  </div>
+               }
             }
          </div>
       </div>
