--- a/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/TrainingDetails.razor
@@ -17,36 +17,30 @@
                   <tr>
                      <td class="label">Trainee</td>
                      <td class="text">
-                        <div class="pills-container">
-                           @if (TrainingOrder.Trainee != null) {
-                              <a href="/Employees/Details?id=@TrainingOrder.Trainee.Id" class="pill trainee">
-                                 @TrainingOrder.Trainee.FirstName @TrainingOrder.Trainee.LastName
-                              </a>
-                           }
-                        </div>
+                        @if (TrainingOrder.Trainee != null) {
+                           <a href="/Employees/Details?id=@TrainingOrder.Trainee.Id" class="link trainee">
+                              @TrainingOrder.Trainee.FirstName @TrainingOrder.Trainee.LastName
+                           </a>
+                        }
                      </td>
                   </tr>
                   <tr>
                      <td class="label">Lesson</td>
                      <td class="text">
-                        <div class="pills-container">
-                           @if (TrainingOrder.Lesson != null) {
-                              <a href="/Lessons/Details?id=@TrainingOrder.Lesson.Id" class="pill">
-                                 @TrainingOrder.Lesson.Name
-                              </a>
-                           }
-                        </div>
+                        @if (TrainingOrder.Lesson != null) {
+                           <a href="/Lessons/Details?id=@TrainingOrder.Lesson.Id" class="link">
+                              @TrainingOrder.Lesson.Name
+                           </a>
+                        }
                      </td>
                   </tr>
                   @if (TrainingOrder.ParentSkill != null) {
                      <tr>
                         <td class="label">Parent Skill</td>
                         <td class="text">
-                           <div class="pills-container">
-                              <a href="/Skills/Details?id=@TrainingOrder.ParentSkill.Id" class="pill yellow">
-                                 @TrainingOrder.ParentSkill.Name
-                              </a>
-                           </div>
+                           <a href="/Skills/Details?id=@TrainingOrder.ParentSkill.Id" class="link">
+                              @TrainingOrder.ParentSkill.Name
+                           </a>
                         </td>
                      </tr>
                   }
@@ -54,120 +48,137 @@
                      <td class="label">Created By</td>
                      <td class="text">
                         @if (TrainingOrder.CreatedByUserId != null) {
-                           <p class="info">@CreatedByUserName</p>
+                           <a href="/Accounts/Details?id=@TrainingOrder.CreatedByUserId" class="link">
+                              @CreatedByUserName
+                           </a>
                         }
                      </td>
                   </tr>
                </tbody>
             </table>
          </div>
-      </div>
-   </div>
-
-   @if (!TrainingOrder.Status.Equals("Approving"))
-   {
-      <div class="title-row">
-         <p class="title">Approved - @TrainingOrder.ApprovalDate</p>
-      </div>
-      <div class="text-group">
-         <p class="title">Trainers</p>
-         <div class="info">
-            <div class="pills-container">
-               @{
-                  var list = new List<Employee>();
-                  foreach (var trainer in TrainingOrder.Trainers)
-                  {
-                     list.Add(trainer);
-                  }
-                  foreach (var groupPerson in groupPeople)
-                  {
-                     if (!list.Contains(groupPerson))
-                     {
-                        list.Add(groupPerson);
-                     }
-                  }
-
-                  foreach (var item in list)
-                  {
-                     <a href="/Employees/Details?id=@item.Id" class="pill">@item.FirstName @item.LastName</a>
-                  }
-               }
-            </div>
-
-         </div>
-      </div>
-      if (TrainingOrder.TrainerGroups.Count > 0)
-      {
-         <div class="text-group">
-            <p class="title">Trainer Groups</p>
-            <div class="info">
-               <div class="pills-container">
-                  @{
-                     foreach (var group in TrainingOrder.TrainerGroups)
-                     {
-                        <a href="/TrainerGroups/Details?id=@group.Id" class="pill">@group.Name</a>
-                     }
-                  }
+         @if (!TrainingOrder.Status.Equals("Approving")) {
+            <div class="field-section">
+               <div class="title-row">
+                  <p class="title">Approved - @TrainingOrder.ApprovalDate</p>
                </div>
+               <table>
+                  <tbody>
+                     <tr>
+                        <td class="label">Trainers</td>
+                        <td class="text">
+                           <div class="pills-container">
+                              @{
+                                 var list = new List<Employee>();
+                                 foreach (var trainer in TrainingOrder.Trainers) {
+                                    list.Add(trainer);
+                                 }
+                                 foreach (var groupPerson in groupPeople) {
+                                    if (!list.Contains(groupPerson)) {
+                                       list.Add(groupPerson);
+                                    }
+                                 }
+                                 foreach (var item in list) {
+                                    <a href="/Employees/Details?id=@item.Id" class="pill">@item.FirstName @item.LastName</a>
+                                 }
+                              }
+                           </div>
+                        </td>
+                     </tr>
+                     @if (TrainingOrder.TrainerGroups.Count > 0) {
+                        <tr>
+                           <td class="label">Trainer Groups</td>
+                           <td class="text">
+                              <div class="pills-container">
+                                 @{
+                                    foreach (var group in TrainingOrder.TrainerGroups)
+                                    {
+                                       <a href="/TrainerGroups/Details?id=@group.Id" class="pill">@group.Name</a>
+                                    }
+                                 }
+                              </div>
+                           </td>
+                        </tr>
+                     }
+                     <tr>
+                        <td class="label">Location</td>
+                        <td class="text">
+                           @if (TrainingOrder.Location != null) {
+                              <a href="/Locations/Details?id=@TrainingOrder.LocationId" class="link">
+                                 @TrainingOrder.Location.Name
+                              </a>
+                           }
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
             </div>
+         }
+         @if (!TrainingOrder.Status.Equals("Approving") && !TrainingOrder.Status.Equals("Scheduling")){
+            <div class="field-section">
+               <div class="title-row">
+                  <p class="title">Scheduled - @TrainingOrder.ScheduleDate</p>
+               </div>
+               <table>
+                  <tbody>
+                     <tr>
+                        <td class="label">Priority Level</td>
+                        <td class="text">@TrainingOrder.Priority</td>
+                     </tr>
+                     <tr>
+                        <td class="label">Training Hours Needed</td>
+                        <td class="text">@TrainingOrder.Lesson.Duration Hours</td>
+                     </tr>
+                     <tr>
+                        <td class="label">Begin Date</td>
+                        <td class="text">@TrainingOrder.BeginDate</td>
+                     </tr>
+                  </tbody>
+               </table>
+            </div>
+         }
+      </div>
+
+      @if (TrainingOrder.Status.Equals("Completed") || TrainingOrder.Status.Equals("Verified")) {
+         <div class="field-section">
+            <div class="field-section">
+               <div class="title-row">
+                  <p class="title">Completed - @TrainingOrder.CompletionDate</p>
+               </div>
+               <table>
+                  <tbody>
+                     <tr>
+                        <td class="label">Closing Notes</td>
+                        <td class="text">@TrainingOrder.ClosingNotes</td>
+                     </tr>
+                  </tbody>
+               </table>
+            </div>
+            @if (TrainingOrder.Status.Equals("Verified")) {
+               if (TrainingOrder.Verification != null) {
+                  <div class="field-section">
+                     <div class="title-row">
+                        <p class="title">Verified - @TrainingOrder.Verification.VerifyDate</p>
+                     </div>
+                     <table>
+                        <tbody>
+                           <tr>
+                              <td class="label">Signed By</td>
+                              <td class="text">@TrainingOrder.Verification.Signature</td>
+                           </tr>
+                           <tr>
+                              <td class="label">Effectiveness</td>
+                              <td class="text">@TrainingOrder.Verification.VerifyNotes</td>
+                           </tr>
+                        </tbody>
+                     </table>
+                  </div>
+               }
+            }
          </div>
       }
-      if (TrainingOrder.Location != null)
-      {
-         <div class="text-group">
-            <p class="title">Location</p>
-            <p class="info">@TrainingOrder.Location.Name</p>
-         </div>
-      }
-   }
-   @if (!TrainingOrder.Status.Equals("Approving") && !TrainingOrder.Status.Equals("Scheduling"))
-   {
-      <div class="title-row">
-         <p class="title">Scheduled - @TrainingOrder.ScheduleDate</p>
-      </div>
-      <div class="text-group">
-         <p class="title">Priority Level</p>
-         <p class="info">@TrainingOrder.Priority</p>
-      </div>
-      <div class="text-group">
-         <p class="title">Training Hours Needed</p>
-         <p class="info">@TrainingOrder.Lesson.Duration Hours</p>
-      </div>
-      <div class="text-group">
-         <p class="title">Begin Date</p>
-         <p class="info">@TrainingOrder.BeginDate</p>
-      </div>
-   }
-   @if (TrainingOrder.Status.Equals("Completed") || TrainingOrder.Status.Equals("Verified"))
-   {
-      <div class="title-row">
-         <p class="title">Completed - @TrainingOrder.CompletionDate</p>
-      </div>
-      <div class="text-group">
-         <p class="title">Closing Notes</p>
-         <pre class="info">@TrainingOrder.ClosingNotes</pre>
-      </div>
-   }
-   @if (TrainingOrder.Status.Equals("Verified"))
-   {
-      if (TrainingOrder.Verification != null)
-      {
-         <div class="title-row">
-            <p class="title">Verified - @TrainingOrder.Verification.VerifyDate</p>
-         </div>
-         <div class="text-group">
-            <p class="title">Signed By</p>
-            <p class="info">@TrainingOrder.Verification.Signature</p>
-         </div>
-         <div class="text-group">
-            <p class="title">Effectiveness</p>
-            <pre class="info">@TrainingOrder.Verification.VerifyNotes</pre>
-         </div>
-      }
-   }
-}
-else
-{
+   </div>
+} else {
    <p>Loading...</p>
 }
 
