--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -372,7 +372,8 @@ nav {
 
             .panel .body .properties .user-form .field-container .title-row {
                background-color: var(--gray3);
-               padding: 3px 5px;
+               padding: 3px 0;
+               padding-left: 10px;
             }
 
                .panel .body .properties .user-form .field-container .title-row .title {
